Feat: Alteração para melhoria do codigo
